--- a/Web.Application/Web.Application.csproj
+++ b/Web.Application/Web.Application.csproj
@@ -15,6 +15,7 @@
 	<PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
 	  <PackageReference Include="MediatR" Version="13.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
